--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-AUTH0_CLIENT_ID=AaR58yNI5WKF3sDpqsKsEnuDGCYbS8UX
-AUTH0_DOMAIN=virnyi.eu.auth0.com
+AUTH0_CLIENT_ID=Jw1DQ7TeU3RP8jP03ZLd2dnO0eeyEhiP
+AUTH0_DOMAIN=ovirnyi.eu.auth0.com
 AUTH0_CLIENT_SECRET=aVV5Y-C0mOgJZVNr23E3YJVMiqXplD4yAvi_fI9trObwmDt_hTt97lTEY4nD7HeY
